feat: add maintenance window api
